# GUI-package-manager

./: README.md  metadata.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: tauri-ipc.ts
tmp-app/: package.json
tmp-app/src-tauri/: Cargo.toml  tauri.conf.json
tmp-app/src-tauri/src/: main.rs
